# autonomous-research-infrastructure

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Autonomous_Research_Infrastructure_API_Token_Model_GBP1000.md  Autonomous_Research_Infrastructure_API_Token_Model_GBP1000_Quality_First.md  Autonomous_Research_Infrastructure_Finance_Plan.md  Autonomous_Research_Infrastructure_Financial_Model_GBP1000_Claude_Max20x_Highest_Quality.md  Autonomous_Research_Infrastructure_Financial_Model_GBP1000_Claude_Max_Highest_Quality.md  Autonomous_Research_Infrastructure_Process_API_Map.md  CLAUDE.md  CONTRIBUTING.md  MIGRATIONS.md  Makefile  README.md  TESTING.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4c62ef3393e1_add_llm_spend_table.py  6caa5fb6b874_add_provenance_proof_json_to_source_.py  a1f2c3d4e5b6_pipeline_runs_and_heartbeat.py  cdef8b8f700b_initial_schema.py
backend/app/: auth.py  config.py  database.py  logging_config.py  main.py
backend/app/api/: autonomy.py  batch.py  categories.py  cohorts.py  collegial.py  config.py  corrections.py  expert_reviews.py  failures.py  families.py  leaderboard.py  matches.py  novelty.py  outcomes.py  papers.py  provenance.py  release.py  reliability.py  reviews.py  rsi.py  significance_memos.py  sources.py  stats.py  throughput.py  tournament.py
backend/app/models/: __init__.py  acknowledgment_record.py  autonomy_card.py  claim_map.py  cohort_tag.py  colleague_profile.py  collegial_exchange.py  collegial_session.py  correction_record.py  domain_config.py  drift_threshold_log.py  expert_review.py  failure_record.py  failure_type_proposal.py  family_proposal.py  llm_spend.py  lock_artifact.py  match.py  meta_pipeline_run.py  novelty_check.py  paper.py  paper_family.py  paper_package.py  pipeline_run.py  prompt_version.py  rating.py  rating_snapshot.py  reliability_metric.py  review.py  review_layer_config.py  role_config.py  rsi_experiment.py  rsi_gate_log.py  significance_memo.py  source_card.py  source_snapshot.py  submission_outcome.py  tournament_run.py
backend/app/schemas/: config.py  leaderboard.py  match.py  paper.py  stats.py
backend/app/services/cohort/: cohort_service.py
backend/app/services/collegial/: review_loop.py
backend/app/services/data_sources/: base.py  courtlistener.py  edgar.py  federal_register.py  openalex.py  registry.py  regulations_gov.py  usaspending.py
backend/app/services/failure_taxonomy/: classifier.py
backend/app/services/integrity/: code_scanner.py
backend/app/services/llm/: anthropic_provider.py  google_provider.py  openai_provider.py  provider.py  router.py  spend.py
backend/app/services/novelty/: detector.py
backend/app/services/outcomes/: outcome_tracker.py
backend/app/services/paper_generation/: autonomy_tracker.py  boundary_enforcer.py  code_writer.py  data_fetcher.py  idea_generator.py  orchestrator.py  paper_composer.py
backend/app/services/provenance/: citation_manager.py  claim_verifier.py  hasher.py  source_registry.py
backend/app/services/release/: release_manager.py  significance_memo_service.py
backend/app/services/reliability/: reliability_engine.py
backend/app/services/review_pipeline/: __init__.py  advisor_review.py  exhibit_review.py  l1_structural.py  l2_provenance.py  l3_method.py  l4_adversarial.py  l5_human_escalation.py  orchestrator.py  prose_review.py  referee_review.py  revision.py  theory_review.py
backend/app/services/rsi/: drift_tuner.py  experiment_manager.py  family_config_optimizer.py  family_discoverer.py  improvement_targeter.py  layer_architect.py  (+8 more)
backend/app/utils/: __init__.py
backend/domain_configs/: _template.yaml  ai_governance.yaml  economics.yaml  public_health.yaml
backend/seeds/: families.py  run_seeds.py  source_cards.py
backend/tests/: conftest.py  test_alembic_on_startup.py  test_alembic_round_trip.py  test_analyst_json_salvage.py  test_analyst_subprocess.py  test_analyst_syntax_retry.py  test_anthropic_retry_set.py  test_api_papers.py  test_auth.py  test_autonomy_api.py  test_batch.py  test_batch_error_surfacing.py  test_batch_generate_async.py  test_batch_generate_streaming.py  test_cohorts_api.py  test_collegial.py  test_collegial_round_cap.py  test_collegial_session_recovery.py  test_config_api.py  test_corrections.py  test_data_mode.py  test_data_sources.py  test_data_steward_id_filter.py  test_drafter_claim_source_validation.py  test_drafter_claim_text_defensibility.py  test_drafter_claim_type_pairing.py  test_drafter_closed_source_set.py  test_drafter_framing_directive.py  test_drafter_tier_awareness.py  test_drafter_title_extraction.py  test_e2e_strict_path.py  test_expert_reviews.py  test_failures.py  test_families.py  test_health.py  test_integration_pipeline.py  test_l1_soft_link_recognition.py  test_l2_coverage_formula.py  test_l2_coverage_no_longer_critical.py  test_l3_l4_prefer_manuscript_column.py  (+51 more)
(+136 files in other folders)
